[project]
name = "go-out"
version = "0.1.0"
description = "Mix a randomised soundtrack into a video with on-screen track titles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "moviepy>=2.2.1",
    "pyacoustid>=1.3.1",
    "pyloudnorm>=0.2.0",
    "typer>=0.26.3",
]

[project.scripts]
go-out = "go_out.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["go_out"]
